--- a/src/main/java/MessageBoard_OL/Web/login.html
+++ b/src/main/java/MessageBoard_OL/Web/login.html
@@ -7,7 +7,56 @@
     <link href="http://libs.baidu.com/bootstrap/3.0.3/css/bootstrap.min.css" rel="stylesheet">
     <script src="http://libs.baidu.com/jquery/2.0.0/jquery.min.js"></script>
     <script src="http://libs.baidu.com/bootstrap/3.0.3/js/bootstrap.min.js"></script>
+
 </head>
-<body>
+
+
+<body background=BG.jpg>
+
+
+
+<!-- 外部表格开始 -->
+　　 <table width="100%" height="100%" align="center">
+    　　 <tr>
+    　　 <td>
+    　　 <div align="center">
+    　　 <!-- 内部表格开始 -->
+    　　 <table width="200" height="300">
+    　　 <tr>
+    　　 <td>
+
+    <form method="post" action="###" name="myform" onsubmit="checkpost()">
+        <label for="name">用户名：</label><br /><input type="text" name="name" id="name" /><br />
+        <label for="pw">  密码：</label><br /><input type="password" name="pw" id="pw" /><br />
+        <input type="submit" value="登陆" />
+        <a href="/signup.html">立即注册</a>
+    </form>
+
+    </td>
+    　　 </tr>
+    　　 </table>
+    　　 <!-- 内部部表格结束 -->
+    　　 </div>
+    　　 </td>
+    　　 </tr>
+    　　 </table>
+　　 <!-- 外部表格结束 -->
+
+
+
+
+
+
+<script>
+    function checkpost(){
+        if(document.forms[0].name.value=="你要的用户名"&&document.forms[0].pw.value=="你要的密码"){
+            window.location="你要跳转的地址";
+        }else{
+            alert("用户名或密码不正确！");
+            return false;
+        }
+    }
+</script>
+
 </body>
 </html>
