--- a/src/main/java/MessageBoard_OL/Web/login.html
+++ b/src/main/java/MessageBoard_OL/Web/login.html
@@ -25,8 +25,8 @@
     　　 <tr>
     　　 <td>
 
-    <form method="post" action="###" name="myform" onsubmit="checkpost()">
-        <label for="name">用户名：</label><br /><input type="text" name="name" id="name" /><br />
+    <form method="post" action="/login" name="myform" onsubmit="checkpost()">
+        <label for="username">用户名：</label><br /><input type="text" name="username" id="name" /><br />
         <label for="pw">  密码：</label><br /><input type="password" name="pw" id="pw" /><br />
         <input type="submit" value="登陆" />
         <a href="/signup.html">立即注册</a>
@@ -47,16 +47,40 @@
 
 
 
-<script>
-    function checkpost(){
-        if(document.forms[0].name.value=="你要的用户名"&&document.forms[0].pw.value=="你要的密码"){
-            window.location="你要跳转的地址";
-        }else{
-            alert("用户名或密码不正确！");
-            return false;
-        }
-    }
-</script>
+<!--<script>-->
+    <!--function checkpost(){-->
+        <!--var xmlhttp-->
+        <!--var checkname;-->
+        <!--var checkpassword;-->
+        <!--if (window.XMLHttpRequest)-->
+        <!--{// code for IE7+, Firefox, Chrome, Opera, Safari-->
+            <!--xmlhttp=new XMLHttpRequest();-->
+        <!--}-->
+        <!--else-->
+        <!--{// code for IE6, IE5-->
+            <!--xmlhttp=new ActiveXObject("Microsoft.XMLHTTP");-->
+        <!--}-->
+
+
+        <!--xmlhttp.onreadystatechange=function(){-->
+            <!--if(xmlhttp.readyState==4 && xmlhttp.status==200){-->
+
+                <!--var obj=JSON.parse(xmlhttp.responseText);-->
+                <!--checkname=obj.username;-->
+                <!--checkpassword=obj.password;-->
+            <!--}-->
+        <!--}-->
+        <!--xmlhttp.open("GET","/login",true);-->
+        <!--xmlhttp.send();-->
+
+        <!--if(document.forms[0].usname.value==checkname && document.forms[0].pw.value==checkpassword){-->
+            <!--window.location="/index.html";-->
+        <!--}else{-->
+            <!--alert("用户名或密码不正确！");-->
+            <!--return false;-->
+        <!--}-->
+    <!--}-->
+<!--</script>-->
 
 </body>
 </html>
