--- a/src/main/java/MessageBoard_OL/Web/signup.html
+++ b/src/main/java/MessageBoard_OL/Web/signup.html
@@ -18,7 +18,7 @@
     <br>
     <label for="pw1">密码:</label><br><input type="password"  id="pw1" onchange="checkpw();">
     <br>
-    <label for="pw2">确认密码:</label><br><input type="password" name="pw" id="pw2" onchange="checkpw();">
+    <label for="pw2">确认密码:</label><br><input type="password" name="password" id="pw2" onchange="checkpw();">
     <span id="errorpwd" style="display:none">两次输入密码不一致</span>
 
     <br>
