--- a/src/main/java/MessageBoard_OL/Web/index.html
+++ b/src/main/java/MessageBoard_OL/Web/index.html
@@ -1,5 +1,30 @@
 <!DOCTYPE html>
 <html>
+<script>
+
+    function GetCookie(name)
+    {
+        var nameEQ = name + "=";
+        var ca = document.cookie.split(';');
+        for(var i=0;i < ca.length;i++)
+        {
+            var c = ca[i];
+            while (c.charAt(0)==' ') c = c.substring(1,c.length);
+            if (c.indexOf(nameEQ) == 0) return c.substring(nameEQ.length,c.length);
+        }
+        return null;
+    }
+
+    if(GetCookie("entrypermission")!="true"){
+        window.location="/login.html";
+    }
+    if(GetCookie("username")!=GetCookie("realname")){
+        window.location="/login.html";
+    }
+
+
+</script>
+
 <head>
     <meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
     <title>~~~~~~~~留言板~~~~~~~~</title>
@@ -14,26 +39,11 @@
 <script>
     var usname;
 </script>
-<!--<script>-->
-    <!--usname="abc";-->
-<!--</script>-->
+
+
 <script>
     //读取cookie
-    function GetCookie(name)
-    {
-        var nameEQ = name + "=";
-        var ca = document.cookie.split(';');
-        for(var i=0;i < ca.length;i++)
-        {
-            var c = ca[i];
-            while (c.charAt(0)==' ') c = c.substring(1,c.length);
-            if (c.indexOf(nameEQ) == 0) return c.substring(nameEQ.length,c.length);
-        }
-        return null;
-    }
-
     usname=GetCookie("username");
-
 </script>
 
 
@@ -72,7 +82,7 @@
         <div class="page-header">
             <div class="text=center">
                 <h1>
-                    <img src="/head1.jpg"class="img-rounded">
+                    <img src="/head1.jpg" class="img-rounded">
                     DRRR~!
                 </h1>
             </div>
@@ -86,13 +96,13 @@
             </div>
 
             <div class="panel panel-default">
-                <div class="panel-body">
-                    <p id="myDiva">
-                        第一楼是管理员的
+                <div class="panel-body" >
+                    <p id="myDiva" style="word-break:break-all;">
+                        第一楼是管理员的~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
                     </p>
                 </div>
-                <div class="panel-footer">
-                    <p><script>document.write(usname);</script></p>
+                <div class="panel-footer"  class="text-right">
+                    <p><script>document.write("管理员没账号=。=");</script></p>
                 </div>
             </div>
 
@@ -185,7 +195,27 @@
 
     <div class="col-xs-1">
 
-        <p id="clientuser"><script>document.write(usname);</script></p>
+        <p id="clientuser"><script>document.write(usname);</script>
+            <input type="button" onclick="checklogout()" value="登出" style="background-color:#FFF;border:0;cursor:pointer" />
+        </p>
+
+        <script>
+            function delCookie(name)
+            {
+                var exp = new Date();
+                exp.setTime(exp.getTime() - 1);
+                var cval=GetCookie(name);
+                if(cval!=null)
+                    document.cookie= name + "="+cval+";expires="+exp.toGMTString();
+            }
+            function checklogout(){
+                delCookie("username");
+                delCookie("entrypermission");
+                delCookie("realname");
+                delCookie("password");
+                window.location="/login.html";
+            }
+        </script>
 
 
     </div>
