--- a/src/main/java/MessageBoard_OL/Web/login.html
+++ b/src/main/java/MessageBoard_OL/Web/login.html
@@ -58,7 +58,7 @@
             var expires = "; expires="+date.toGMTString();
         }
         else var expires = "";
-        document.cookie = name+"="+value+expires+"; path=/";
+        document.cookie = name+"="+value+expires+";";
     }
     //读取cookie
     function GetCookie(name)
