--- a/src/main/java/MessageBoard_OL/Web/signup.html
+++ b/src/main/java/MessageBoard_OL/Web/signup.html
@@ -33,7 +33,7 @@
                         <span id="errorpwd" style="display:none;color: red;font-size: smaller">两次输入密码不一致</span>
 
                         <br/><br/>
-                        <input type="submit" value="注册">
+                        <button class="btn btn-default btn-lg" type="submit">注册</button>
                     </form>
                 </div>
                 </div>
