--- a/src/main/java/MessageBoard_OL/Web/login.html
+++ b/src/main/java/MessageBoard_OL/Web/login.html
@@ -24,8 +24,8 @@
         <div class="col-md-8" style="background-color: burlywood;font-weight: bold">
             <h3>Freedom MessageBoard</h3>
             <p><br /></p>
-            <p>留点什么东西在登陆界面呢~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~会不会超品屏幕呢，还差一点点了。</p>
-            <p>看来是不会超屏了=。=</p>
+            <p>留点什么东西在登陆界面呢~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~会不会屏呢，还差一点点了。</p>
+            <p>看来是不会超屏了</p>
         </div>
         <div class="col-md-4">
             <div class="row">
@@ -44,7 +44,7 @@
 
                                 <div class="row" style="text-align: center;color: whitesmoke">
                                     <p>还没有账号么？亲！</p>
-                                    <button type="submit" class="btn btn-default btn-lg"  style="font-weight: bolder" action="/signup">立即注册</button>
+                                    <a class="btn btn-default btn-lg" href="signup.html" style="font-weight: bolder" role="button">立即注册</a>
                                 </div>
 
                             </form>
